@@ -1,0 +1,124 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.33.
+.TH GCONFTOOL-2 "1" "October 2003" "gconftool-2 2.2.1" "User Commands"
+.SH NAME
+gconftool-2 \- manual page for gconftool-2
+.SH SYNOPSIS
+.B gconftool-2
+[\fIOPTION\fR...]
+.SH DESCRIPTION
+.TP
+\fB\-s\fR, \fB\-\-set\fR
+Set a key to a value and sync. Use with \fB\-\-type\fR.
+.TP
+\fB\-g\fR, \fB\-\-get\fR
+Print the value of a key to standard output.
+.TP
+\fB\-u\fR, \fB\-\-unset\fR
+Unset the keys on the command line.
+.TP
+\fB\-\-recursive\-unset\fR
+Recursively unset all keys at or below the key/directory names on the command line.
+.TP
+\fB\-a\fR, \fB\-\-all\-entries\fR
+Print all key/value pairs in a directory.
+.TP
+\fB\-\-all\-dirs\fR
+Print all subdirectories in a directory.
+.TP
+\fB\-R\fR, \fB\-\-recursive\-list\fR
+Print all subdirectories and entries under a dir, recursively.
+.TP
+\fB\-\-dir\-exists\fR=\fISTRING\fR
+Return 0 if the directory exists, 2 if it does not.
+\fB\-t\fR, \fB\-\-type\fR=\fIint\fR|bool|float|string|list|pair
+Specify the type of the value being set, or the type of the value a schema describes. Unique abbreviations are allowed.
+.TP
+\fB\-\-list\-type\fR=\fIint\fR|bool|float|string
+Specify the type of the list value being set, or the type of the value a schema describes. Unique abbreviations are allowed.
+.TP
+\fB\-\-car\-type\fR=\fIint\fR|bool|float|string
+Specify the type of the car pair value being set, or the type of the value a schema describes. Unique abbreviations are allowed.
+.TP
+\fB\-\-cdr\-type\fR=\fIint\fR|bool|float|string
+Specify the type of the cdr pair value being set, or the type of the value a schema describes. Unique abbreviations are allowed.
+.TP
+\fB\-\-short\-desc\fR=\fIDESCRIPTION\fR
+Specify a short half-line description to go in a schema.
+.TP
+\fB\-\-long\-desc\fR=\fIDESCRIPTION\fR
+Specify a several-line description to go in a schema.
+.TP
+\fB\-\-owner\fR=\fIOWNER\fR
+Specify the owner of a schema.
+.TP
+\fB\-\-install\-schema\-file\fR=\fIFILENAME\fR
+Specify a schema file to be installed
+.TP
+\fB\-\-config\-source\fR=\fISOURCE\fR
+Specify a configuration source to use rather than the default path
+.TP
+\fB\-\-direct\fR
+Access the config database directly, bypassing server. Requires that gconfd is not running.
+.TP
+\fB\-\-set\-schema\fR
+Set a schema and sync. Use with \fB\-\-short\-desc\fR, \fB\-\-long\-desc\fR, \fB\-\-owner\fR, and \fB\-\-type\fR.
+.TP
+\fB\-\-makefile\-install\-rule\fR
+Properly installs schema files on the command line into the database. GCONF_CONFIG_SOURCE environment variable should be set to a non-default config source or set to the empty string to use the default.
+.TP
+\fB\-\-break\-key\fR
+Torture-test an application by setting and unsetting a bunch of values of different types for keys on the command line.
+.TP
+\fB\-\-break\-directory\fR
+Torture-test an application by setting and unsetting a bunch of keys inside the directories on the command line.
+.TP
+\fB\-\-short\-docs\fR
+Get the short doc string for a key
+.TP
+\fB\-\-long\-docs\fR
+Get the long doc string for a key
+.TP
+\fB\-\-get\-schema\-name\fR
+Get the name of the schema applied to this key
+.TP
+\fB\-\-apply\-schema\fR
+Specify the schema name followed by the key to apply the schema name to
+.TP
+\fB\-\-unapply\-schema\fR
+Remove any schema name applied to the given keys
+.TP
+\fB\-\-get\-default\-source\fR
+Get the name of the default source.
+.TP
+\fB\-\-shutdown\fR
+Shut down gconfd. \fBDon't use this option without good reason.\fP
+.TP
+\fB\-p\fR, \fB\-\-ping\fR
+Return 0 if gconfd is running, 2 if not.
+.TP
+\fB\-\-spawn\fR
+Launch the config server (gconfd). (Normally happens automatically when needed.)
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+Print version
+.PP
+Help options
+.TP
+-?, \fB\-\-help\fR
+Show the help message.
+.TP
+\fB\-\-usage\fR
+Display brief usage message.
+.SH EXAMPLES
+Display the path to the current desktop wallpaper.
+.IP
+gconftool-2 \-\-get /desktop/gnome/background/picture_filename
+.PP
+Change the widget font to "Serif 12"
+.IP
+gconftool-2 \-\-type string \-\-set /desktop/gnome/interface/font_name "Serif 12"
+.PP
+.SH AUTHOR
+\fBGConf\fP was written by Havoc Pennington <hp@redhat.com>.
+.SH "SEE ALSO"
+The GConf web site, \fIhttp://www.gnome.org/projects/gconf/\fI.
